<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcomat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_action_action_search"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/menu_refresh"
        app:showAsAction="never"
        android:title="@string/menu_refresh"/>


</menu>
